--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.22.1",
+    "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.0",
+    "customize-cra": "^0.5.0",
     "react": "^16.9.0",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
