Add OAuth2 support to backend (untested!)

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,5 +1,10 @@
 build:
 	go build -o bin/canvasProxy src/main.go
 
+runbuilt:
+	go build -o bin/canvasProxy src/main.go && source .env && ./bin/canvasProxy
+
+br: buildrun
+
 run:
-	go run src/main.go
+	source .env && go run src/main.go
