--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.5.0",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "qs": "^6.8.0",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
@@ -17,7 +18,8 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
