--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "description": "this is here because heroku requires a package.json in the root dir",
   "dependencies": {},
   "scripts": {
-    "build": "make heroku"
+    "heroku": "make herokunode"
   }
 }
