--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "start:rs": "react-scripts start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.js\" \"src/**/*.jsx\"",
+    "formatcheck": "prettier --check \"src/**/*.js\" \"src/**/*.jsx\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "1.18.2"
   }
 }
